# hygproxy

./: CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  bt.c  bt.h  cli.c  cli.h  conf.c  conf.h  http.c  http.h  influx.c  influx.h  io.c  io.h  main.c  poller.c  poller.h  wifi.c  wifi.h
main/http/: conf.html  hdr.html  index.html  main.css  main.js
